--- a/src/query/storages/fuse/Cargo.toml
+++ b/src/query/storages/fuse/Cargo.toml
@@ -60,6 +60,7 @@ itertools = { workspace = true }
 jsonb = { workspace = true }
 log = { workspace = true }
 opendal = { workspace = true }
+parking_lot = { workspace = true }
 parquet = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
