--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -43,11 +43,11 @@ runs:
         taplo fmt --check
 
 
-    # TODO: enable it later
-    # - name: Audit dependencies
-    #   shell: bash
-    #   if: "!contains(github.event.head_commit.message, 'skip audit')"
-    #   run: cargo audit --db ./target/advisory-db
+    TODO: enable it later
+    - name: Audit dependencies
+      shell: bash
+      if: "!contains(github.event.head_commit.message, 'skip audit')"
+      run: cargo audit --db ./target/advisory-db
 
     - name: Clippy
       shell: bash
