--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -47,8 +47,10 @@ ignore = [
     "RUSTSEC-2024-0351",
     # gix-path: improperly resolves configuration path reported by Git
     "RUSTSEC-2024-0371",
-    # Remotely exploitable Denial of Service in Tonic, ignored temporarily 
+    # Remotely exploitable Denial of Service in Tonic, ignored temporarily
     "RUSTSEC-2024-0376",
     #rustls network-reachable panic in `Acceptor::accept`
     "RUSTSEC-2024-0399",
+    # `idna` accepts Punycode labels that do not produce any non-ASCII when decoded
+    "RUSTSEC-2024-0421",
 ]
