--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,30 +131,6 @@ jobs:
           cp ./target/${{ matrix.target }}/${{ env.BUILD_PROFILE }}/databend-* ./target/${{ env.BUILD_PROFILE }}/
           bash ./scripts/ci/ci-run-sqllogic-tests.sh base
 
-  build_musl:
-    runs-on: [self-hosted, X64, Linux, 8c32g, aws]
-    needs: create_release
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - x86_64-unknown-linux-musl
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ needs.create_release.outputs.sha }}
-          fetch-depth: 0
-      - name: Build Release
-        uses: ./.github/actions/build_linux
-        env:
-          DATABEND_RELEASE_VERSION: ${{ needs.create_release.outputs.version }}
-          DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY: ${{ secrets.DATABEND_ENTERPRISE_LICENSE_PUBLIC_KEY }}
-        with:
-          sha: ${{ github.sha }}
-          target: ${{ matrix.target }}
-          artifacts: query,meta,metactl
-
   build_udf:
     runs-on: [self-hosted, "${{ matrix.runner }}", Linux, 8c32g, aws]
     needs: create_release
@@ -184,7 +160,7 @@ jobs:
 
   publish:
     runs-on: [self-hosted, X64, Linux, 2c8g, aws]
-    needs: [create_release, build_default, build_musl]
+    needs: [create_release, build_default]
     strategy:
       fail-fast: false
       matrix:
@@ -193,8 +169,6 @@ jobs:
             target: x86_64-unknown-linux-gnu
           - category: default
             target: aarch64-unknown-linux-gnu
-          - category: default
-            target: x86_64-unknown-linux-musl
     steps:
       - name: Checkout
         uses: actions/checkout@v4
