Don't load from catalog everytime
Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -33,6 +33,7 @@ ordered-float = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
 typetag = { workspace = true }
+serde_json = { workspace = true }
 
 [lints]
 workspace = true
