--- a/src/common/arrow/Cargo.toml
+++ b/src/common/arrow/Cargo.toml
@@ -110,6 +110,7 @@ itertools = { workspace = true, optional = true }
 lexical-core = { version = "0.8", optional = true }
 log = { workspace = true }
 lz4 = { version = "1.24" }
+lz4_flex = { version = "0.11.3" }
 num = { version = "0.4", default-features = false, features = ["std"] }
 num-traits = "0.2"
 opendal = { workspace = true }
