--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -49,6 +49,7 @@ jiff = { workspace = true }
 jsonb = { workspace = true }
 lexical-core = { workspace = true }
 libm = { workspace = true }
+log.workspace = true
 match-template = { workspace = true }
 md-5 = { workspace = true }
 naive-cityhash = { workspace = true }
