--- a/scripts/ci/deploy/config/databend-query-node-1.toml
+++ b/scripts/ci/deploy/config/databend-query-node-1.toml
@@ -44,6 +44,8 @@ udf_server_allow_insecure = true
 
 cloud_control_grpc_server_address = "http://0.0.0.0:50051"
 
+network_policy_whitelist = ['127.0.0.0/8']
+
 [[query.users]]
 name = "root"
 auth_type = "no_password"
