--- a/.github/actions/setup_bendsql/action.yml
+++ b/.github/actions/setup_bendsql/action.yml
@@ -8,15 +8,16 @@ runs:
       shell: bash
       run: |
         if command -v bendsql >/dev/null 2>&1; then
+          bendsql --version
           exit 0
         fi
         case $RUNNER_PROVIDER in
           aws)
-            aws s3 cp s3://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb
+            aws s3 cp s3://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb --no-progress
             sudo dpkg -i /tmp/bendsql.deb
             ;;
           gcp)
-            gsutil cp gs://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb
+            gsutil cp gs://databend-ci/packages/bendsql_$(dpkg --print-architecture).deb /tmp/bendsql.deb --no-progress
             sudo dpkg -i /tmp/bendsql.deb
             ;;
           *)
@@ -30,6 +31,7 @@ runs:
       shell: bash
       run: |
         if command -v bendsql >/dev/null 2>&1; then
+          bendsql --version
           exit 0
         fi
         brew install databendcloud/homebrew-tap/bendsql
