feat: databend-meta watch API provides `initial_flush` field
If `WatchRequest.initial_flush` is `true`, when the watch stream is
established, all the key values in the specified range will be sent
through the stream to the watching client.

This allows the client to setup a full copy of the key range as a client
side cache, and furthur modifications will be received and the client
side cache can be updated.

--- a/src/meta/raft-store/Cargo.toml
+++ b/src/meta/raft-store/Cargo.toml
@@ -50,6 +50,7 @@ serde_json = { workspace = true }
 stream-more = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+tonic = { workspace = true }
 
 [dev-dependencies]
 databend-common-base = { workspace = true }
