--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -26,11 +26,13 @@ io-uring = [
 enable_queries_executor = []
 
 [dependencies]
+anyhow = { workspace = true }
 arrow-array = { workspace = true }
 arrow-buffer = { workspace = true }
 arrow-flight = { workspace = true }
 arrow-ipc = { workspace = true, features = ["lz4", "zstd"] }
 arrow-schema = { workspace = true }
+arrow-select = { workspace = true }
 arrow-udf-js = { workspace = true }
 arrow-udf-python = { workspace = true, optional = true }
 arrow-udf-wasm = { workspace = true }
