refactor: Serialize iceberg table inside engine options to reduce catalog requests (#17049)
* feat: Bump iceberg-rust to latest commit

Signed-off-by: Xuanwo <github@xuanwo.io>

* Don't load from catalog everytime

Signed-off-by: Xuanwo <github@xuanwo.io>

* Remove not needed deps

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix iceberg

Signed-off-by: Xuanwo <github@xuanwo.io>

* Try optimize

Signed-off-by: Xuanwo <github@xuanwo.io>

* Fix build

Signed-off-by: Xuanwo <github@xuanwo.io>

---------

Signed-off-by: Xuanwo <github@xuanwo.io>

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -29,7 +29,7 @@ iceberg-catalog-glue = { workspace = true }
 iceberg-catalog-hms = { workspace = true }
 iceberg-catalog-rest = { workspace = true }
 serde = { workspace = true }
-tokio = { workspace = true }
+serde_json = { workspace = true }
 typetag = { workspace = true }
 
 [lints]
