fix(query): uri path should not be percent-encoded

--- a/src/query/ast/Cargo.toml
+++ b/src/query/ast/Cargo.toml
@@ -23,6 +23,7 @@ logos = { workspace = true }
 nom = { workspace = true }
 nom-rule = { workspace = true }
 ordered-float = { workspace = true }
+percent-encoding = { workspace = true }
 pratt = { workspace = true }
 pretty = { workspace = true }
 pretty_assertions = { workspace = true }
