--- a/scripts/ci/deploy/config/databend-query-node-1.toml
+++ b/scripts/ci/deploy/config/databend-query-node-1.toml
@@ -155,3 +155,6 @@ data_cache_storage = "none"
 path = "./.databend/_cache"
 # max bytes of cached data 20G
 max_bytes = 21474836480
+
+[spill]
+spill_local_disk_path = "./.databend/temp/_query_spill"
