--- a/Cargo.toml
+++ b/Cargo.toml
@@ -272,7 +272,7 @@ dyn-clone = "1.0.9"
 educe = "0.4" # FIXME: failed to upgrade to educe 0.6
 either = "1.9"
 enquote = "1.1.0"
-enum-as-inner = "0.5" # FIXME: failed to upgrade to enum-as-inner 0.6
+enum-as-inner = "0.6"
 enum_dispatch = "0.3.13"
 enumflags2 = { version = "0.7.7", features = ["serde"] }
 ethnum = { version = "1.5.0" }
