feat(cluster): support custom management cluster

--- a/scripts/ci/deploy/config/databend-query-node-system-managed.toml
+++ b/scripts/ci/deploy/config/databend-query-node-system-managed.toml
@@ -52,6 +52,7 @@ definition = "CREATE FUNCTION ping(STRING) RETURNS STRING LANGUAGE python HANDLE
 
 [query.resources_management]
 type = "system_managed"
+resource_group
 
 [log]
 
