chore(query): add test parallel params

--- a/.github/actions/test_sqllogic_standalone_linux/action.yml
+++ b/.github/actions/test_sqllogic_standalone_linux/action.yml
@@ -13,7 +13,7 @@ inputs:
     description: "logic test handlers, mysql,http,clickhouse"
     required: true
     default: ""
-  handlers:
+  parallel:
     description: "logic test parallel"
     required: false
     default: ""
