chore(query): fix udf metrics (#17134)
* chore(query): fix udf metrics

* chore(query): rename

* chore(query): update

* chore(query): add test parallel params

* chore(query): add test parallel params

* chore(query): add test parallel params

* chore(query): add test parallel params

--- a/.github/workflows/reuse.sqllogic.yml
+++ b/.github/workflows/reuse.sqllogic.yml
@@ -84,6 +84,7 @@ jobs:
         with:
           dirs: udf_server
           handlers: mysql,http
+          parallel: 1
           storage-format: all
       - name: Upload failure
         if: failure() || cancelled()
