--- a/Cargo.toml
+++ b/Cargo.toml
@@ -222,11 +222,11 @@ async-compression = { git = "https://github.com/datafuse-extras/async-compressio
     "all-algorithms",
 ] }
 async-recursion = "1.1.1"
-async-std = "1.12"
 async-stream = "0.3.3"
 async-trait = { version = "0.1.77" }
-aws-config = "1.1.7"
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.17.0"
+aws-smithy-runtime = { version = "1.6.2", default-features = false }
 backoff = "0.4" # FIXME: use backon to replace this.
 backon = "1"
 backtrace = "0.3.73"
@@ -306,7 +306,9 @@ hostname = "0.3.1"
 http = "1"
 humantime = "2.1.0"
 hyper = "1"
+hyper-tls = "0.5.0"
 hyper-util = { version = "0.1.9", features = ["client", "client-legacy", "tokio", "service"] }
+hyper_v014 = { package = "hyper", version = "0.14" }
 iceberg = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
 iceberg-catalog-glue = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
 iceberg-catalog-hms = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
