--- a/src/common/grpc/Cargo.toml
+++ b/src/common/grpc/Cargo.toml
@@ -18,6 +18,7 @@ anyerror = { workspace = true }
 hickory-resolver = { workspace = true }
 hyper = { workspace = true }
 hyper-util = { workspace = true }
+hyper_v014 = { workspace = true }
 jwt-simple = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
