--- a/src/query/ee/Cargo.toml
+++ b/src/query/ee/Cargo.toml
@@ -14,6 +14,7 @@ test = true
 [dependencies]
 async-backtrace = { workspace = true }
 async-trait = { workspace = true }
+aws-smithy-runtime = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
@@ -61,13 +62,15 @@ databend-storages-common-table-meta = { workspace = true }
 derive-visitor = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
+hyper-tls = { workspace = true }
+hyper_v014 = { workspace = true }
 jwt-simple = { workspace = true }
 log = { workspace = true }
 opendal = { workspace = true }
 tempfile = { workspace = true }
 
 # aws sdk
-aws-config = { workspace = true, features = ["behavior-version-latest"] }
+aws-config = { workspace = true }
 aws-sdk-s3 = { workspace = true }
 
 [dev-dependencies]
