--- a/src/query/ee/Cargo.toml
+++ b/src/query/ee/Cargo.toml
@@ -26,6 +26,7 @@ databend-common-config = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
 databend-common-functions = { workspace = true }
+databend-common-grpc = { workspace = true }
 databend-common-io = { workspace = true }
 databend-common-license = { workspace = true }
 databend-common-meta-api = { workspace = true }
