chore: try split number cast function impl

--- a/src/query/functions/Cargo.toml
+++ b/src/query/functions/Cargo.toml
@@ -30,6 +30,7 @@ databend-functions-scalar-arithmetic = { workspace = true }
 databend-functions-scalar-datetime = { workspace = true }
 databend-functions-scalar-decimal = { workspace = true }
 databend-functions-scalar-geo = { workspace = true }
+databend-functions-scalar-integer-basic-arithmetic = { workspace = true }
 databend-functions-scalar-math = { workspace = true }
 databend-functions-scalar-numeric-basic-arithmetic = { workspace = true }
 ethnum = { workspace = true }
