--- a/src/query/functions/src/scalars/integer_arithmetic/Cargo.toml
+++ b/src/query/functions/src/scalars/integer_arithmetic/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "databend-functions-scalar-numeric-basic-arithmetic"
+name = "databend-functions-scalar-integer-basic-arithmetic"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 databend-common-expression = { workspace = true }
+databend-functions-scalar-numeric-basic-arithmetic = { workspace = true }
 match-template = { workspace = true }
 num-traits = { workspace = true }
-strength_reduce = { workspace = true }
 
 [package.metadata.cargo-machete]
 ignored = ["match-template"]
