--- a/Cargo.toml
+++ b/Cargo.toml
@@ -320,7 +320,7 @@ humantime = "2.1.0"
 hyper = "1"
 hyper-tls = "0.5.0"
 hyper-util = { version = "0.1.9", features = ["client", "client-legacy", "tokio", "service"] }
-hyper_v014 = { package = "hyper", version = "0.14" }
+hyper_v014 = { package = "hyper", version = "0.14", features = ["client", "tcp"] }
 iceberg = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
 iceberg-catalog-glue = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
 iceberg-catalog-hms = { version = "0.3.0", git = "https://github.com/Xuanwo/iceberg-rust/", rev = "01d706a1" }
