feat: add ttc member (tcp testing container)

--- a/.github/actions/test_cloud_sqllogic_standalone_linux/action.yml
+++ b/.github/actions/test_cloud_sqllogic_standalone_linux/action.yml
@@ -10,7 +10,7 @@ inputs:
     required: true
     default: ""
   handlers:
-    description: "logic test handlers, mysql,http,clickhouse"
+    description: "logic test handlers, mysql,http,hybird"
     required: true
     default: ""
   storage-format:
