--- a/tests/sqllogictests/Cargo.toml
+++ b/tests/sqllogictests/Cargo.toml
@@ -15,6 +15,8 @@ name = "databend-sqllogictests"
 
 [dependencies]
 async-trait = { workspace = true }
+async-recursion = { workspace = true }
+recursive = { workspace = true }
 clap = { workspace = true }
 cookie = { workspace = true }
 databend-common-base = { workspace = true }
