--- a/.github/workflows/reuse.sqllogic.yml
+++ b/.github/workflows/reuse.sqllogic.yml
@@ -32,7 +32,7 @@ jobs:
         timeout-minutes: 10
         with:
           dirs: management
-          handlers: mysql,http
+          handlers: http,hybrid
 
   standalone:
     runs-on:
@@ -83,7 +83,7 @@ jobs:
         timeout-minutes: 15
         with:
           dirs: udf_server
-          handlers: mysql,http
+          handlers: http,hybrid
           parallel: 1
           storage-format: all
       - name: Upload failure
@@ -105,7 +105,7 @@ jobs:
         timeout-minutes: 15
         with:
           dirs: task
-          handlers: mysql,http
+          handlers: http,hybrid
           storage-format: all
       - name: Upload failure
         if: failure() || cancelled()
@@ -152,7 +152,7 @@ jobs:
         timeout-minutes: 15
         with:
           dirs: tpch_iceberg
-          handlers: mysql,http
+          handlers: http,hybrid
       - name: Upload failure
         if: failure()
         uses: ./.github/actions/artifact_failure
@@ -213,7 +213,7 @@ jobs:
         with:
           storage: ${{ matrix.storage }}
           dirs: stage
-          handlers: mysql,http
+          handlers: http,hybrid
       - name: Upload failure
         if: failure()
         uses: ./.github/actions/artifact_failure
@@ -262,7 +262,7 @@ jobs:
         timeout-minutes: 15
         with:
           dirs: ee
-          handlers: mysql,http
+          handlers: http,hybrid
           storage-format: ${{ matrix.format }}
       - name: Upload failure
         if: failure()
