--- a/Cargo.toml
+++ b/Cargo.toml
@@ -481,6 +481,7 @@ temp-env = "0.3.0"
 tempfile = "3.4.0"
 terminal_size = "0.2.6"
 test-harness = "0.1.1"
+testcontainers = "0.23"
 thiserror = { version = "1" }
 thrift = "0.17.0"
 tikv-jemalloc-ctl = { version = "0.6.0", features = ["use_std", "stats"] }
