--- a/Cargo.toml
+++ b/Cargo.toml
@@ -363,10 +363,11 @@ num-derive = "0.3.3"
 num-traits = "0.2.19"
 num_cpus = "1.13.1"
 object = "0.36.5"
-object_store_opendal = "0.48.1"
+# We have to use this yanked versions to allow use opendal 0.51, will be fixed in next version.
+object_store_opendal = "=0.48.3"
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
-opendal = { version = "0.50.1", features = [
+opendal = { version = "0.51", features = [
     "layers-fastrace",
     "layers-prometheus-client",
     "layers-async-backtrace",
