--- a/.github/actions/test_stateful_cluster_linux/action.yml
+++ b/.github/actions/test_stateful_cluster_linux/action.yml
@@ -35,6 +35,7 @@ runs:
         aws --endpoint-url http://127.0.0.1:9900/ s3 cp tests/data/ontime_200.csv s3://testbucket/admin/data/ontime_200_v1.csv --no-progress
         aws --endpoint-url http://127.0.0.1:9900/ s3 cp tests/data/ontime_200.parquet s3://testbucket/admin/data/ontime_200_v1.parquet --no-progress
         aws --endpoint-url http://127.0.0.1:9900/ s3 cp tests/data/iceberg s3://testbucket --recursive --no-progress
+        aws --endpoint-url http://127.0.0.1:9900/ s3 mb s3://spillbucket
 
     - name: Run Stateful Tests with Cluster mode
       shell: bash
