feat(cluster): support system-managed cluster (#17051)
* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* feat(cluster): support custom management cluster

* refactor: improve and clean up `warehouse_mgr::upsert_self_managed()`

### Improvements:

- Added retry mechanism with a fallback in the retry loop.
- Return an error if an un

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ members = [
     "src/query/ee_features/storage_quota",
     "src/query/ee_features/inverted_index",
     "src/query/ee_features/virtual_column",
+    "src/query/ee_features/resources_management",
     "src/query/service",
     "src/query/ee",
     "src/meta/api",
@@ -185,6 +186,7 @@ databend-enterprise-fail-safe = { path = "src/query/ee_features/fail_safe" }
 databend-enterprise-inverted-index = { path = "src/query/ee_features/inverted_index" }
 databend-enterprise-meta = { path = "src/meta/ee" }
 databend-enterprise-query = { path = "src/query/ee" }
+databend-enterprise-resources-management = { path = "src/query/ee_features/resources_management" }
 databend-enterprise-storage-encryption = { path = "src/query/ee_features/storage_encryption" }
 databend-enterprise-storage-quota = { path = "src/query/ee_features/storage_quota" }
 databend-enterprise-stream-handler = { path = "src/query/ee_features/stream_handler" }
