get_state_layout

--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -69,6 +69,7 @@ arrow-ord = { workspace = true }
 criterion = { workspace = true }
 goldenfile = { workspace = true }
 pretty_assertions = { workspace = true }
+proptest = { workspace = true }
 rand = { workspace = true }
 
 [[bench]]
