--- a/Cargo.toml
+++ b/Cargo.toml
@@ -489,6 +489,7 @@ tempfile = "3.4.0"
 terminal_size = "0.2.6"
 test-harness = "0.1.1"
 testcontainers = "0.23"
+testcontainers-modules = "0.11.5"
 thiserror = { version = "1" }
 thrift = "0.17.0"
 tikv-jemalloc-ctl = { version = "0.6.0", features = ["use_std", "stats"] }
@@ -558,12 +559,8 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "valuable"] }
 
 # Databend Integration Test
-msql-srv = { git = "https://github.com/databendlabs/msql-srv.git", rev = "cd443dd" }
-mysql_common = "0.32.4"
 quickcheck = "1.0"
 sqllogictest = "0.21.0"
-sqlparser = "0.50.0"
-threadpool = "1.8"
 
 [workspace.lints.rust]
 async_fn_in_trait = "allow"
