--- a/tests/sqllogictests/Cargo.toml
+++ b/tests/sqllogictests/Cargo.toml
@@ -23,9 +23,8 @@ databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
 env_logger = { workspace = true }
 futures-util = { workspace = true }
-msql-srv = { workspace = true }
 mysql_async = { workspace = true }
-mysql_common = { workspace = true }
+redis = { workspace = true }
 rand = { workspace = true }
 recursive = { workspace = true }
 regex = { workspace = true }
@@ -33,10 +32,9 @@ reqwest = { workspace = true, features = ["cookies"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqllogictest = { workspace = true }
-sqlparser = { workspace = true }
 testcontainers = { workspace = true }
+testcontainers-modules = { workspace = true, features = ["mysql", "redis"] }
 thiserror = { workspace = true }
-threadpool = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
 walkdir = { workspace = true }
