chore:bring back func `set_cache_capacity`

--- a/scripts/ci/deploy/config/databend-query-node-1.toml
+++ b/scripts/ci/deploy/config/databend-query-node-1.toml
@@ -150,6 +150,9 @@ data_path = "./.databend/stateless_test_data"
 # use "disk" to enabled disk cache
 data_cache_storage = "none"
 
+
+table_meta_snapshot_count = 1
+
 [cache.disk]
 # cache path
 path = "./.databend/_cache"
