--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -55,14 +55,14 @@ jobs:
       runner_provider: aws
       license_type: trial
 
-  linux_hive:
-    needs: changes
-    if: needs.changes.outputs.any_src_changed == 'true'
-    uses: ./.github/workflows/reuse.linux.hive.yml
-    secrets: inherit
-    with:
-      build_profile: ci
-      runner_provider: aws
+  # linux_hive:
+  #   needs: changes
+  #   if: needs.changes.outputs.any_src_changed == 'true'
+  #   uses: ./.github/workflows/reuse.linux.hive.yml
+  #   secrets: inherit
+  #   with:
+  #     build_profile: ci
+  #     runner_provider: aws
 
   ready:
     if: always()
