chore: debug sccache

--- a/.github/actions/setup_build_tool/action.yml
+++ b/.github/actions/setup_build_tool/action.yml
@@ -24,6 +24,8 @@ runs:
         BIN_LOCAL=$HOME/.cargo/bin
         mkdir -p $BIN_LOCAL
         echo "$BIN_LOCAL" >> $GITHUB_PATH
+        mkdir -p target
+        touch target/sccache.log
 
         cat <<EOF >$BIN_LOCAL/build-tool
         #!/bin/bash
@@ -46,6 +48,8 @@ runs:
         export SCCACHE_REGION=us-east-2
         export SCCACHE_S3_KEY_PREFIX="cache/sccache/"
         export SCCACHE_S3_USE_SSL="true"
+        export SCCACHE_ERROR_LOG=target/sccache.log
+        export SCCACHE_LOG=info
         EOF
             ;;
 
@@ -56,6 +60,8 @@ runs:
         export SCCACHE_GCS_RW_MODE=READ_WRITE
         export SCCACHE_GCS_BUCKET=databend-ci
         export SCCACHE_GCS_KEY_PREFIX="cache/sccache/"
+        export SCCACHE_ERROR_LOG=target/sccache.log
+        export SCCACHE_LOG=info
         EOF
             ;;
 
