--- a/.github/workflows/reuse.linux.hive.yml
+++ b/.github/workflows/reuse.linux.hive.yml
@@ -44,7 +44,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: build
+          name: sccache-build-hive
           path: target/sccache.log
 
   test_stateful_hive_standalone:
