chore(ci): add link arg to RUSTFLAGS

--- a/docker/build-tool/alpine/Dockerfile
+++ b/docker/build-tool/alpine/Dockerfile
@@ -18,10 +18,8 @@ RUN chmod +x /build/scripts/setup/dev_setup.sh && \
     mv /root/.cargo /opt/rust/cargo && \
     mv /root/.rustup /opt/rust/rustup
 
-RUN curl -sSfLo /tmp/mold.tar.gz https://github.com/rui314/mold/releases/download/v2.4.0/mold-2.4.0-$(uname -m)-linux.tar.gz && \
-    tar --strip-components=1 -xzf /tmp/mold.tar.gz -C /usr/local && \
-    rm -rf /tmp/mold.tar.gz && \
-    ln -sf /usr/local/bin/mold /usr/bin/$(uname -m)-linux-gnu-ld
+RUN curl -sSfLo /tmp/mold.tar.gz https://github.com/rui314/mold/releases/download/v2.35.1/mold-2.35.1-$(uname -m)-linux.tar.gz && \
+    tar --strip-components=1 -xzf /tmp/mold.tar.gz -C /usr/local && rm -rf /tmp/mold.tar.gz
 
 ENV RUSTUP_HOME /opt/rust/rustup
 ENV CARGO_HOME /opt/rust/cargo
